c4prj2_input/grade.txt
Grading at Thu Jun 25 05:36:16 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:31:19: error: ‘n_cards’ undeclared (first use in this function)
     (*hand).cards[n_cards]=card;
                   ^
input.c:31:19: note: each undeclared identifier is reported only once for each function it appears in
Compilation of input.c failed

Overall Grade: F
